--- a/XGBoost/XGBoost.ipynb
+++ b/XGBoost/XGBoost.ipynb
@@ -2,78 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 14,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-09-09T09:01:34.883433Z",
      "start_time": "2024-09-09T09:01:34.871059Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n"
-   ],
-   "outputs": [],
-   "execution_count": 14
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ecbcccc91c0ea097",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T08:59:00.595823Z",
      "start_time": "2024-09-09T08:58:59.907168Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"../data/finalData2.csv\")\n",
     "df['time'] = pd.to_datetime(df['time'])\n",
     "df.drop(['oerlikon', 'time', 'Unnamed: 0'], inplace=True, axis = 1)\n",
     "X,y = df.drop('city', axis = 1), df['city']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n"
-   ],
-   "id": "ecbcccc91c0ea097",
-   "outputs": [],
-   "execution_count": 9
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Fit model",
-   "id": "484e08617ffc6600"
+   "id": "484e08617ffc6600",
+   "metadata": {},
+   "source": [
+    "# Fit model"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "30188a1041b38ea6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T09:00:27.668579Z",
      "start_time": "2024-09-09T09:00:27.054633Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "reg = xgb.XGBRegressor()\n",
     "reg.fit(X_train, y_train)\n",
     "y_pred = reg.predict(X_test)"
-   ],
-   "id": "30188a1041b38ea6",
-   "outputs": [],
-   "execution_count": 13
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "92c165b4dd6c9315",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T09:01:47.589726Z",
      "start_time": "2024-09-09T09:01:47.576168Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "score = mean_squared_error(y_test, y_pred)\n",
-    "print(score)"
-   ],
-   "id": "92c165b4dd6c9315",
    "outputs": [
     {
      "name": "stdout",
@@ -83,50 +82,24 @@
      ]
     }
    ],
-   "execution_count": 15
+   "source": [
+    "score = mean_squared_error(y_test, y_pred)\n",
+    "print(score)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "33bb679bd803206d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T09:02:06.896715Z",
      "start_time": "2024-09-09T09:02:06.874367Z"
     }
    },
-   "cell_type": "code",
-   "source": "X_train.head()",
-   "id": "33bb679bd803206d",
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "        weekday  minutes_since_midnight  opened  temperature_2m (°C)  \\\n",
-       "337089        5                     213   False            10.400000   \n",
-       "47356         5                     405    True             4.049333   \n",
-       "234984        1                      38   False            11.218333   \n",
-       "58094         2                      59   False             1.297889   \n",
-       "299877        2                    1086    True            14.192778   \n",
-       "\n",
-       "        relative_humidity_2m (%)  apparent_temperature (°C)  \\\n",
-       "337089                 90.557222                   9.355722   \n",
-       "47356                  99.000000                   1.924667   \n",
-       "234984                 55.272222                   6.091111   \n",
-       "58094                  95.010556                  -1.702111   \n",
-       "299877                 65.750556                  12.246389   \n",
-       "\n",
-       "        precipitation (mm)  cloud_cover (%)  wind_speed_10m (km/h)  \\\n",
-       "337089            0.455722       100.000000               5.600000   \n",
-       "47356             0.000000        89.846667               4.774000   \n",
-       "234984            0.000000        53.558333              23.663333   \n",
-       "58094             0.000000        60.285000               6.100000   \n",
-       "299877            0.000000        47.501111               9.385556   \n",
-       "\n",
-       "        shortwave_radiation (W/m²)  is_day ()  \n",
-       "337089                    0.000000        0.0  \n",
-       "47356                     0.000000        0.0  \n",
-       "234984                    0.000000        0.0  \n",
-       "58094                     0.000000        0.0  \n",
-       "299877                  247.916667        1.0  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -233,6 +206,35 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "        weekday  minutes_since_midnight  opened  temperature_2m (°C)  \\\n",
+       "337089        5                     213   False            10.400000   \n",
+       "47356         5                     405    True             4.049333   \n",
+       "234984        1                      38   False            11.218333   \n",
+       "58094         2                      59   False             1.297889   \n",
+       "299877        2                    1086    True            14.192778   \n",
+       "\n",
+       "        relative_humidity_2m (%)  apparent_temperature (°C)  \\\n",
+       "337089                 90.557222                   9.355722   \n",
+       "47356                  99.000000                   1.924667   \n",
+       "234984                 55.272222                   6.091111   \n",
+       "58094                  95.010556                  -1.702111   \n",
+       "299877                 65.750556                  12.246389   \n",
+       "\n",
+       "        precipitation (mm)  cloud_cover (%)  wind_speed_10m (km/h)  \\\n",
+       "337089            0.455722       100.000000               5.600000   \n",
+       "47356             0.000000        89.846667               4.774000   \n",
+       "234984            0.000000        53.558333              23.663333   \n",
+       "58094             0.000000        60.285000               6.100000   \n",
+       "299877            0.000000        47.501111               9.385556   \n",
+       "\n",
+       "        shortwave_radiation (W/m²)  is_day ()  \n",
+       "337089                    0.000000        0.0  \n",
+       "47356                     0.000000        0.0  \n",
+       "234984                    0.000000        0.0  \n",
+       "58094                     0.000000        0.0  \n",
+       "299877                  247.916667        1.0  "
       ]
      },
      "execution_count": 16,
@@ -240,120 +242,56 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "source": [
+    "X_train.head()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "3c01a2ea6b00a372"
-  },
-  {
+   "id": "3c01a2ea6b00a372",
    "metadata": {},
-   "cell_type": "markdown",
-   "source": "# Calculate for a week",
-   "id": "cc3304e49077b812"
+   "outputs": [],
+   "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "cc3304e49077b812",
+   "metadata": {},
+   "source": [
+    "# Calculate for a week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "271fef60d62f6f30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T09:05:03.016028Z",
      "start_time": "2024-09-09T09:05:02.361942Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"../data/finalData2.csv\")\n",
     "df['time'] = pd.to_datetime(df['time'])\n",
     "start = pd.to_datetime(df['time'])"
-   ],
-   "id": "271fef60d62f6f30",
-   "outputs": [],
-   "execution_count": 18
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "581e1f58c1846637",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-09T09:05:58.771449Z",
      "start_time": "2024-09-09T09:05:58.753268Z"
     }
    },
-   "cell_type": "code",
-   "source": "df",
-   "id": "581e1f58c1846637",
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "        Unnamed: 0                time  city  oerlikon  weekday  \\\n",
-       "0                0 2024-01-24 16:43:08   155       140        2   \n",
-       "1                1 2024-01-24 16:43:38   154       140        2   \n",
-       "2                2 2024-01-24 16:45:31   163       140        2   \n",
-       "3                3 2024-01-24 16:46:02   163       141        2   \n",
-       "4                4 2024-01-24 16:46:32   162       143        2   \n",
-       "...            ...                 ...   ...       ...      ...   \n",
-       "412796      412796 2024-06-27 15:57:34    76       105        3   \n",
-       "412797      412797 2024-06-27 15:58:05    76       106        3   \n",
-       "412798      412798 2024-06-27 15:58:35    79       106        3   \n",
-       "412799      412799 2024-06-27 15:59:06    78       105        3   \n",
-       "412800      412800 2024-06-27 16:00:09    77       106        3   \n",
-       "\n",
-       "        minutes_since_midnight  opened  temperature_2m (°C)  \\\n",
-       "0                         1003    True            11.496778   \n",
-       "1                         1003    True            11.490944   \n",
-       "2                         1005    True            11.468972   \n",
-       "3                         1006    True            11.462944   \n",
-       "4                         1006    True            11.457111   \n",
-       "...                        ...     ...                  ...   \n",
-       "412796                     957    True            25.687833   \n",
-       "412797                     958    True            25.690417   \n",
-       "412798                     958    True            25.692917   \n",
-       "412799                     959    True            25.695500   \n",
-       "412800                     960    True            25.701750   \n",
-       "\n",
-       "        relative_humidity_2m (%)  apparent_temperature (°C)  \\\n",
-       "0                      74.594444                   7.112444   \n",
-       "1                      74.636111                   7.109111   \n",
-       "2                      74.793056                   7.096556   \n",
-       "3                      74.836111                   7.093111   \n",
-       "4                      74.877778                   7.089778   \n",
-       "...                          ...                        ...   \n",
-       "412796                 64.878333                  28.051333   \n",
-       "412797                 64.904167                  28.061667   \n",
-       "412798                 64.929167                  28.071667   \n",
-       "412799                 64.955000                  28.082000   \n",
-       "412800                 64.995000                  28.101500   \n",
-       "\n",
-       "        precipitation (mm)  cloud_cover (%)  wind_speed_10m (km/h)  \\\n",
-       "0                 0.243778       100.000000              25.006000   \n",
-       "1                 0.245444       100.000000              24.991000   \n",
-       "2                 0.251722       100.000000              24.934500   \n",
-       "3                 0.253444       100.000000              24.919000   \n",
-       "4                 0.255111       100.000000              24.904000   \n",
-       "...                    ...              ...                    ...   \n",
-       "412796            0.004056         9.865556               8.635222   \n",
-       "412797            0.003194         9.469444               8.585278   \n",
-       "412798            0.002361         9.086111               8.536944   \n",
-       "412799            0.001500         8.690000               8.487000   \n",
-       "412800            0.000000         8.017500               8.400750   \n",
-       "\n",
-       "        shortwave_radiation (W/m²)  is_day ()  \n",
-       "0                        49.373333        1.0  \n",
-       "1                        49.273333        1.0  \n",
-       "2                        48.896667        1.0  \n",
-       "3                        48.793333        1.0  \n",
-       "4                        48.693333        1.0  \n",
-       "...                            ...        ...  \n",
-       "412796                  621.015000        1.0  \n",
-       "412797                  620.162500        1.0  \n",
-       "412798                  619.337500        1.0  \n",
-       "412799                  618.485000        1.0  \n",
-       "412800                  616.960000        1.0  \n",
-       "\n",
-       "[412801 rows x 15 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -593,6 +531,74 @@
        "</table>\n",
        "<p>412801 rows × 15 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0                time  city  oerlikon  weekday  \\\n",
+       "0                0 2024-01-24 16:43:08   155       140        2   \n",
+       "1                1 2024-01-24 16:43:38   154       140        2   \n",
+       "2                2 2024-01-24 16:45:31   163       140        2   \n",
+       "3                3 2024-01-24 16:46:02   163       141        2   \n",
+       "4                4 2024-01-24 16:46:32   162       143        2   \n",
+       "...            ...                 ...   ...       ...      ...   \n",
+       "412796      412796 2024-06-27 15:57:34    76       105        3   \n",
+       "412797      412797 2024-06-27 15:58:05    76       106        3   \n",
+       "412798      412798 2024-06-27 15:58:35    79       106        3   \n",
+       "412799      412799 2024-06-27 15:59:06    78       105        3   \n",
+       "412800      412800 2024-06-27 16:00:09    77       106        3   \n",
+       "\n",
+       "        minutes_since_midnight  opened  temperature_2m (°C)  \\\n",
+       "0                         1003    True            11.496778   \n",
+       "1                         1003    True            11.490944   \n",
+       "2                         1005    True            11.468972   \n",
+       "3                         1006    True            11.462944   \n",
+       "4                         1006    True            11.457111   \n",
+       "...                        ...     ...                  ...   \n",
+       "412796                     957    True            25.687833   \n",
+       "412797                     958    True            25.690417   \n",
+       "412798                     958    True            25.692917   \n",
+       "412799                     959    True            25.695500   \n",
+       "412800                     960    True            25.701750   \n",
+       "\n",
+       "        relative_humidity_2m (%)  apparent_temperature (°C)  \\\n",
+       "0                      74.594444                   7.112444   \n",
+       "1                      74.636111                   7.109111   \n",
+       "2                      74.793056                   7.096556   \n",
+       "3                      74.836111                   7.093111   \n",
+       "4                      74.877778                   7.089778   \n",
+       "...                          ...                        ...   \n",
+       "412796                 64.878333                  28.051333   \n",
+       "412797                 64.904167                  28.061667   \n",
+       "412798                 64.929167                  28.071667   \n",
+       "412799                 64.955000                  28.082000   \n",
+       "412800                 64.995000                  28.101500   \n",
+       "\n",
+       "        precipitation (mm)  cloud_cover (%)  wind_speed_10m (km/h)  \\\n",
+       "0                 0.243778       100.000000              25.006000   \n",
+       "1                 0.245444       100.000000              24.991000   \n",
+       "2                 0.251722       100.000000              24.934500   \n",
+       "3                 0.253444       100.000000              24.919000   \n",
+       "4                 0.255111       100.000000              24.904000   \n",
+       "...                    ...              ...                    ...   \n",
+       "412796            0.004056         9.865556               8.635222   \n",
+       "412797            0.003194         9.469444               8.585278   \n",
+       "412798            0.002361         9.086111               8.536944   \n",
+       "412799            0.001500         8.690000               8.487000   \n",
+       "412800            0.000000         8.017500               8.400750   \n",
+       "\n",
+       "        shortwave_radiation (W/m²)  is_day ()  \n",
+       "0                        49.373333        1.0  \n",
+       "1                        49.273333        1.0  \n",
+       "2                        48.896667        1.0  \n",
+       "3                        48.793333        1.0  \n",
+       "4                        48.693333        1.0  \n",
+       "...                            ...        ...  \n",
+       "412796                  621.015000        1.0  \n",
+       "412797                  620.162500        1.0  \n",
+       "412798                  619.337500        1.0  \n",
+       "412799                  618.485000        1.0  \n",
+       "412800                  616.960000        1.0  \n",
+       "\n",
+       "[412801 rows x 15 columns]"
       ]
      },
      "execution_count": 20,
@@ -600,15 +606,17 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20
+   "source": [
+    "df"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "c789101bdc3857a6"
+   "id": "c789101bdc3857a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -627,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
